--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,7 @@ spring.datasource.url=jdbc:h2:~/TwitterCloneDB;DB_CLOSE_ON_EXIT=FALSE
 #spring.datasource.username=test
 #spring.datasource.password=
 
-#createなら再起動時にDB再作成 updateなら追加
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.sql-script-encoding=utf-8
 logging.level.org.hibernate.sql=debug
@@ -15,11 +14,9 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
 spring.http.multipart.max-file-size=5MB
 spring.http.multipart.max-request-size=5MB
 
-# 区切り文字を;から/;に変更しないとPL/pgSQLの文法と衝突して区切れない
 #spring.datasource.separator=/;
 
-# ハイライト
+
 spring.output.ansi.enabled=ALWAYS
 
-#ライブラリにsessionがあるけど使ってないので
 #spring.session.store-type=none
